@@ -1,5 +1,27 @@
 package com.ujcms.cms.ext.web.api;
 
+import static com.ujcms.cms.core.support.UrlConstants.API;
+import static com.ujcms.cms.core.support.UrlConstants.FRONTEND_API;
+import static com.ujcms.commons.db.MyBatis.springPage;
+import static com.ujcms.commons.query.QueryUtils.QUERY_PREFIX;
+
+import java.time.OffsetDateTime;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.function.BiFunction;
+
+import org.springframework.data.domain.Page;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
 import com.ujcms.cms.core.domain.Site;
 import com.ujcms.cms.core.domain.base.UserBase;
 import com.ujcms.cms.core.service.ActionService;
@@ -18,6 +40,7 @@ import com.ujcms.commons.web.Responses;
 import com.ujcms.commons.web.Servlets;
 import com.ujcms.commons.web.exception.Http400Exception;
 import com.ujcms.commons.web.exception.Http404Exception;
+
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.enums.ParameterIn;
@@ -25,23 +48,10 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import org.springframework.data.domain.Page;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.validation.Valid;
-import javax.validation.constraints.NotNull;
-import java.time.OffsetDateTime;
-import java.util.*;
-import java.util.function.BiFunction;
-import java.util.stream.Collectors;
-
-import static com.ujcms.cms.core.support.UrlConstants.API;
-import static com.ujcms.cms.core.support.UrlConstants.FRONTEND_API;
-import static com.ujcms.commons.db.MyBatis.springPage;
-import static com.ujcms.commons.query.QueryUtils.QUERY_PREFIX;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotNull;
 
 /**
  * 投票前台 接口
@@ -197,7 +207,7 @@ public class VoteController {
             throw new Http400Exception("'optionIds' can not be empty");
         }
         List<Long> voteOptionIds = vote.getOptions().stream().map(VoteOptionBase::getId)
-                .collect(Collectors.toList());
+                .toList();
         for (Long optionId : optionIds) {
             if (!voteOptionIds.contains(optionId)) {
                 throw new Http400Exception("'optionId' does not belong vote. optionId: " + optionId);
@@ -212,10 +222,10 @@ public class VoteController {
         private Object options;
 
         public List<Long> getOptionIds() {
-            if (options instanceof String[]) {
-                return Arrays.stream((String[]) options).map(Long::valueOf).collect(Collectors.toList());
-            } else if (options instanceof String) {
-                return Collections.singletonList(Long.valueOf((String) options));
+            if (options instanceof String[] strings) {
+                return Arrays.stream(strings).map(Long::valueOf).toList();
+            } else if (options instanceof String string) {
+                return Collections.singletonList(Long.valueOf(string));
             } else {
                 throw new Http400Exception("options type must be String[] or String: " + options.getClass().getName());
             }
